@@ -19,8 +19,8 @@
 <!-- For the regular version, the versionCode must have an odd tens digit. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="93"
-        android:versionName="2012.09.28a"
+        android:versionCode="95"
+        android:versionName="2012.11.20c"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.0.3 (15). -->
@@ -56,6 +56,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:mimeType="vnd.android.cursor.item/org.tlhInganHol.android.klingonassistant" />
+            </intent-filter>
+        </activity>
+
+        <!-- Displays the Preferences screen. -->
+        <activity android:name=".Preferences"
+                android:label="@string/preferences">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.PREFERENCE" />
             </intent-filter>
         </activity>
 
