@@ -2864,8 +2864,7 @@ The {betleH:n:nolink} is also called the {betleH quv:n:nolink}, to differentiate
       <column name="synonyms"></column>
       <column name="antonyms"></column>
       <column name="see_also">{De'vID:n:name}</column>
-      <column name="notes">{tlhIngan Hol boQwI':n:nolink} "Klingon Language Assistant" - database version 2012.11.18a.
-German translations: Lieven Litaer.
+      <column name="notes">{tlhIngan Hol boQwI':n:nolink} "Klingon Language Assistant" - database version 2012.11.20c.
 
 To begin searching, simply type into the search box.  On some devices, you may have to press the "Search" (magnifying glass) key or the "Menu" key to activate the search box.
 
@@ -2887,7 +2886,11 @@ If you encounter any problems, or have any suggestions, please send me an {email
 
 Please support the Klingon language by purchasing {The Klingon Dictionary:src}, {Klingon for the Galactic Traveler:src}, {The Klingon Way:src}, {Conversational Klingon:src}, {Power Klingon:src}, and other Klingon- and Star Trek-related products from Pocket Books, Simon &amp; Schuster, and Paramount/Viacom/CBS Entertainment.
 
-Klingon, Star Trek, and related marks are trademarks of CBS Studios, Inc., and are used under "fair use" guidelines.</column>
+Klingon, Star Trek, and related marks are trademarks of CBS Studios, Inc., and are used under "fair use" guidelines.
+
+Programming: De'vID
+Klingon-English data: De'vID, with help from others
+German translations: Quvar</column>
       <column name="hidden_notes"></column>
       <column name="components">{boQ:v}, {-wI':v}</column>
       <column name="examples"></column>
