@@ -21,6 +21,13 @@
     <item android:id="@+id/search"
           android:title="@string/menu_search"
           android:icon="@drawable/ic_menu_search"
-          android:showAsAction="ifRoom"
+          android:showAsAction="ifRoom|collapseActionView"
           android:actionViewClass="android.widget.SearchView" />
+
+    <item android:id="@+id/about"
+        android:title="@string/about" />
+
+    <item android:id="@+id/preferences"
+        android:title="@string/preferences" />
+
 </menu>
