@@ -1,2 +1,2 @@
 #!/bin/sh
-vim -p AndroidManifest.xml data/mem.xml src/org/tlhInganHol/android/klingonassistant/KlingonContentDatabase.java
+vim -p AndroidManifest.xml data/mem-01-b.xml src/org/tlhInganHol/android/klingonassistant/KlingonContentDatabase.java
